<?xml version="1.0"?>
<package format="3">
  <name>gl_depth_sim</name>
  <version>0.0.1</version>
  <description>The gl_depth_sim package</description>

  <maintainer email="Jmeyer1292@gmail.com">Jonathan Meyer</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--Used for examples and interfacing-->
  <depend>class_loader</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_conversions</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>tinyxml</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

  <!-- system dependency -->
  <build_depend>libglfw3-dev</build_depend>
  <depend>assimp</depend>
  <depend>libopencv-dev</depend>

  <export>
<!--    <gl_depth_sim plugin="${prefix}/plugin_description.xml"/>-->
    <build_type>ament_cmake</build_type>
  </export>


</package>
